# ultunnel-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  style.css
src-tauri/: Cargo.toml  Info.plist  build.rs  manifest.xml  tauri.conf.json
src-tauri/capabilities/: default.json  singbox.json
src-tauri/icons/: icon.icns
src-tauri/macos/: HelperInfo.plist  smjobbless.m  ultunnel.entitlements.plist
src-tauri/macos/bundle/: copy-privileged.sh  package-macos.sh
src-tauri/macos/helper/: Info.plist  build-helper.sh  ru.ravel.ultunnel-macos.helper.plist
src-tauri/macos/helper/Helper/: Info.plist  main.swift  ru.ravel.ultunnel-macos.helper.plist
src-tauri/macos/helper/UltunnelPrivilegedHelper.xcodeproj/: project.pbxproj
src-tauri/macos/helper/UltunnelPrivilegedHelper.xcodeproj/xcuserdata/petr.xcuserdatad/xcschemes/: xcschememanagement.plist
src-tauri/macos/helper/UltunnelPrivilegedHelper/Helper/: HelperProtocol.swift  Info.plist  main.swift
src-tauri/macos/helper/UltunnelPrivilegedHelper/UltunnelPrivilegedHelper.xcodeproj/: project.pbxproj
src-tauri/macos/helper/UltunnelPrivilegedHelper/UltunnelPrivilegedHelper.xcodeproj/project.xcworkspace/xcuserdata/petr.xcuserdatad/: UserInterfaceState.xcuserstate
src-tauri/macos/installer/: Info.plist  main.swift
src-tauri/macos/installer/Installer/: HelperProtocol.swift  Info.plist  build-installer.sh  main.swift
src-tauri/macos/installer/UltunnelHelperInstaller.xcodeproj/: project.pbxproj
src-tauri/macos/installer/UltunnelHelperInstaller.xcodeproj/xcuserdata/petr.xcuserdatad/xcschemes/: xcschememanagement.plist
src-tauri/src/: api.rs  browser_api.rs  lib.rs  macos_smjobbless.rs  main.rs  settings.rs
src-tauri/windows/UltunnelService/: Program.cs  UltunnelService.csproj  UltunnelService.slnx  UltunnelWindowsService.cs  Worker.cs
src-tauri/windows/UltunnelService/Models/: ServiceCommand.cs  ServiceStatus.cs
src-tauri/windows/UltunnelService/Properties/: launchSettings.json
