[package]
name = "ultunnel-desktop"
version = "0.1.0"
description = "ULtunnel desktop"
authors = ["ravel57"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ultunnel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
tokio = "1.48.0"