[package]
build = "build.rs"
name = "ultunnel-desktop"
version = "0.2.0"
description = "ULtunnel desktop"
authors = ["ravel57"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ultunnel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2.5.3", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
runas = "1"
sysinfo = "0.30"
tauri-plugin-autostart = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(mobile)", "cfg(desktop)"] }
